--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ provider:
   name: aws
   profile: serverlessUser
   stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'ap-southeast-1'}
   runtime: nodejs12.x
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
