--- a/serverless.yml
+++ b/serverless.yml
@@ -4,11 +4,7 @@ service:
 custom:
   webpack:
     webpackConfig: ./webpack.config.js
-    includeModules: true
-  snsTopicName: CashInSNSTopic
-
-environment:
-  snsTopicName: ${self:custom.snsTopicName}
+    includeModules: tru
 
 plugins:
   - serverless-webpack
@@ -31,23 +27,7 @@ provider:
         - 'arn:aws:sns:ap-southeast-1:552434643125:MySNSTopic'
 
 resources:
-  Resources:
-    CognitoUserPool:
-      Type: AWS::Cognito::UserPool
-      Properties:
-        UserPoolName: ${self:custom.cognitoUserPoolName}
-        UsernameAttributes:
-          - email
-        Policies:
-          PasswordPolicy:
-            MinimumLength: 6
-            RequireLowercase: false
-            RequireNumbers: false
-            RequireSymbols: false
-            RequireUppercase: false
-        AutoVerifiedAttributes:
-          - email
-
+  Resources: ${file(./resources/EwalletCognitoUserPool.yml)}
 functions:
   cashIn:
     handler: useCases/cashIn.handler
@@ -55,8 +35,3 @@ functions:
       - http:
           method: POST
           path: cashIn
-  logTransactionAndSendSms:
-    handler: useCases/logTransactionAndSendSms.handler
-    events:
-      - sns:
-          arn: 'aws:sns:${AWS::REGION}:552434643125:MySNSTopic'
